<resources>
    <string name="app_name">SignalHEX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="start">Play</string>
    <string name="edge">EDGE</string>
    <string name="umts">UMTS</string>
    <string name="lte">LTE</string>
    <string name="wifi">Wi-Fi</string>
    <string name="refresh">Refresh</string>
    <string name="alert_dialog_title">Reset Heatmap</string>
    <string name="alert_dialog_message">Are you sure?</string>
    <string name="alert_dialog_positive">Yep, reset</string>
    <string name="alert_dialog_negative">Nope</string>
    <string name="current_location">Current location:</string>
    <string name="not_available">Not available</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="intensity">Intensity:</string>
    <string name="intensity1">%1$d / %2$d</string>
    <string name="none">NONE</string>
    <string name="poor">POOR</string>
    <string name="moderate">MODERATE</string>
    <string name="good">GOOD</string>
    <string name="great">GREAT</string>
    <string name="not_connected">Not connected</string>
    <string name="location_permission_explain_1">This app needs</string>
    <string name="location_permission_explain_2">LOCATION PERMISSION</string>
    <string name="location_permission_explain_3">to show you the map</string>
    <string name="location_permission_request">OK then,\nshow me the map</string>
    <string name="group_title">Networks to show</string>
    <string name="map_satellite">Satellite map</string>
    <string name="hexagons">Hexagons</string>
    <string name="size">Size</string>
    <string-array name="hexagons_size_list">
        <item>Tiny</item>
        <item>Little</item>
        <item>Medium</item>
        <item>Big</item>
        <item>Huge</item>
    </string-array>
    <string-array name="hexagons_colors_list">
        <item>Red to green</item>
        <item>Blue to orange</item>
        <item>Violet to yellow</item>
    </string-array>
    <string-array name="hexagons_transparency_list">
        <item>0%</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
        <item>100%</item>
    </string-array>
    <string name="transparency">Transparency</string>
    <string name="colors">Colors</string>
    <string name="hexagon_size">Hexagon\'s size</string>
    <string name="hexagons_colors">Hexagon\'s colors</string>
    <string name="hexagon_transparency">Hexagon\'s transparency</string>
</resources>
