<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group>
        <item android:title="@string/group_title">
            <menu>
                <item
                    android:id="@+id/edge_item"
                    android:icon="@drawable/ic_cellular_off"
                    android:title="@string/edge"
                    android:checkable="false"
                    app:actionLayout="@layout/edge_switch_layout"/>
                <item
                    android:id="@+id/umts_item"
                    android:icon="@drawable/ic_cellular_off"
                    android:title="@string/umts"
                    android:checkable="false"
                    app:actionLayout="@layout/umts_switch_layout"/>
                <item
                    android:id="@+id/lte_item"
                    android:icon="@drawable/ic_cellular_off"
                    android:title="@string/lte"
                    android:checkable="false"
                    app:actionLayout="@layout/lte_switch_layout"/>
                <item
                    android:id="@+id/wifi_item"
                    android:icon="@drawable/ic_wifi_off"
                    android:title="@string/wifi"
                    android:checkable="false"
                    app:actionLayout="@layout/wifi_switch_layout"/>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/map_satellite"
        android:icon="@drawable/ic_map"
        android:title="@string/map_satellite"
        app:actionLayout="@layout/map_satellite_layout">
    </item>

    <group>
        <item android:title="@string/hexagons">
            <menu>
                <item
                    android:id="@+id/hexagons_dimension"
                    android:icon="@drawable/ic_zoom_out"
                    android:title="@string/size"/>
                <item
                    android:id="@+id/hexagons_colors"
                    android:icon="@drawable/ic_colors"
                    android:title="@string/colors"/>
                <item
                    android:id="@+id/hexagons_transparency"
                    android:icon="@drawable/ic_blur"
                    android:title="@string/transparency"/>
            </menu>
        </item>
    </group>
</menu>
