<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/locationPermissionExplainText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/location_permission_explain_1"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/locationPermissionExplainText2"
            app:layout_constraintEnd_toEndOf="@+id/locationPermissionExplainText2"
            app:layout_constraintStart_toStartOf="@+id/locationPermissionExplainText2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationPermissionExplainText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/location_permission_explain_2"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/locationPermissionExplainText3"
            app:layout_constraintEnd_toEndOf="@+id/locationPermissionRequestButton"
            app:layout_constraintStart_toStartOf="@+id/locationPermissionRequestButton" />

        <TextView
            android:id="@+id/locationPermissionExplainText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/location_permission_explain_3"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/locationPermissionRequestButton"
            app:layout_constraintEnd_toEndOf="@+id/locationPermissionExplainText2"
            app:layout_constraintStart_toStartOf="@+id/locationPermissionExplainText2" />

        <Button
            android:id="@+id/locationPermissionRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/location_permission_request"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>